2007-02-14  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man9/mi_strlog.9.man: updated docs
	* src/include/sys/mps/stream.h: new mi_lock functions, better mi_strlog
	* src/kernel/mpscompat.c: new mi_lock functions, better mi_strlog

	* doc/man/man9/mi_allocb.9.man: added docs for new functions
	* doc/man/man9/mi_sleeplock.9.man: added docs for new functions
	* doc/man/man9/mi_trylock.9.man: added docs for new functions
	* doc/man/man9/mi_unlock.9.man: added docs for new functions

2007-02-12  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.spec.in: support for autoconf 2.61
	* configure.ac: support for autoconf 2.61
	* .cvsignore: support for autoconf 2.61
	* debian/mscript_header.in: support for autoconf 2.61
	* debian/rules.in: support for autoconf 2.61
	* doc/manual/news.texi: support for autoconf 2.61
	* doc/manual/texi/install.texi: support for autoconf 2.61
	* m4/devfs.m4: support for autoconf 2.61
	* m4/openss7.m4: support for autoconf 2.61
	* m4/streams.m4: support for autoconf 2.61
	* scripts/texi/install.texi: support for autoconf 2.61
	* tests/atlocal.in: support for autoconf 2.61

2007-01-28  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/mps/stream.h: added missing MI_COPY_CASE

	* doc/man/strcompat.refs: updated references
	* doc/man/man9/mi_copyout.9.man: updated manual page

2007-01-21  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/mpscompat.c: some improvements to mi_copy_set_rval() it now
	  remembers values across operations

2007-01-15  Brian Bidulock  <bidulock@openss7.org>

	* strcompat.lsm.in: archive size update
	* doc/man/man9/mi_copy_done.9.man: documentation updates and corrections
	* doc/man/man9/mi_copyin.9.man: documentation updates and corrections
	* doc/man/man9/mi_copyin_n.9.man: documentation updates and corrections
	* doc/man/man9/mi_copyout.9.man: documentation updates and corrections
	* doc/man/man9/mi_copyout_alloc.9.man: documentation updates and
	  corrections
	* doc/manual/bugs.texi: updates